[package]
name = "repair-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
tabbed-workspace = { path = "../tabbed-workspace" }
repair-lib = { path = "../repair-lib" }
prism-parser = { git = "https://github.com/johannesalehmann/tiny-pmc" }
rand = "0.10.1"
tokio = { version = "1.52", features = ["full"] }
uuid = { version = "1.24.0", features = ["v4"] }